apps/pgadmin/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.apisnoop.dba: pgadmin
  template:
    metadata:
      labels:
        io.apisnoop.dba: pgadmin
    spec:
      securityContext:
        runAsUser: 5050
        fsGroup: 5050
      restartPolicy: Always
      containers:
      - name: pgadmin
        image: "dpage/pgadmin4:4.17"
        ports:
        - containerPort: 80
        volumeMounts:
          - name: pgadmin-config
            mountPath: /pgadmin-config/
      volumes:
        - name: pgadmin-configuration
          configMap:
            name: pgadmin-configuration
            items:
              - key: servers.json
                path: servers.json
                mode: 256
              - key: pgpass
                path: pgpass
                mode: 256
        - name: pgadmin-config
          emptyDir:
            medium: "Memory"
        # https://www.pgadmin.org/docs/pgadmin4/latest/container_deployment.html#http-via-nginx
