apps/pgadmin/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  selector:
    io.apisnoop.dba: pgadmin
  ports:
  - name: "http"
    port: 80
    targetPort: 80
